--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,72 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+// variables
+$PlayfairText: "Playfair Display";
+$PoppinsText: "Poppins";
+$background-primary: #f3f5f5;
+$background-accent: #ffffff;
+$background-accent-2: #dfebf6;
+$text-primary: #21232c;
+$text-accent: #999fb2;
+$text-accent-2: #ff1fff;
+$highlight-red: #235223;
+$accent-red: #00cc88;
+$highlight-blue: #dfebf6;
+$accent-blue: #4433ff;
+$highlight-green: #e5faf3;
+$accent-green: #00cc88;
+$highlight-yellow: #23262a;
+$accent-yellow: #00cc88;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: $PoppinsText;
+  color: $text-primary;
+}
+
+body {
+  background-color: $background-accent;
+}
+
+@mixin light-theme {
+  $PlayfairText: "Playfair Display";
+  $PoppinsText: "Poppins";
+  $background-primary: #f1f1f1;
+  $background-accent: #f3f5f5;
+  $background-accent-2: #dfebf6;
+  $text-primary: #21232c;
+  $text-accent: #999fb2;
+  $text-accent-2: #ff1fff;
+  $highlight-red: #235223;
+  $accent-red: #00cc88;
+  $highlight-blue: #dfebf6;
+  $accent-blue: #4433ff;
+  $highlight-green: #e5faf3;
+  $accent-green: #00cc88;
+  $highlight-yellow: #23262a;
+  $accent-yellow: #00cc88;
+}
+@mixin dark-theme {
+  $PlayfairText: "Playfair Display";
+  $PoppinsText: "Poppins";
+  $background-primary: #1b1c21;
+  $background-accent: #26282f;
+  $background-accent-2: #ffdfff;
+  $text-primary: #ffffff;
+  $text-accent: #4e5053;
+  $text-accent-2: #ff1fff;
+  $highlight-red: #235223;
+  $accent-red: #00cc88;
+  $highlight-blue: #18263555;
+  $accent-blue: #4433ff;
+  $highlight-green: #0d2726;
+  $accent-green: #00cc88;
+  $highlight-yellow: #23262a;
+  $accent-yellow: #00cc88;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
