--- a/src/pages/resume-page/resume-page.component.html
+++ b/src/pages/resume-page/resume-page.component.html
@@ -4,11 +4,9 @@
     <section class="resume-bio">
       <p>Software<br />Engineer</p>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores
-        aliquam sed, vel impedit veritatis tempore, possimus provident
-        consequuntur cupiditate praesentium sint illum repellendus dolorum
-        corrupti suscipit. Dolore placeat maiores inventore voluptatem earum
-        animi, aliquid illum, fugiat ab quas qui consequuntur.
+        Hi! I'm Samuel Calmday, a software engineer based in the United States.
+        I am currently a college student building expectional digital
+        experiences
       </p>
     </section>
   </div>
